Solving some spacing issues in different DropDown menu components

--- a/src/components/dropMenu/dropMenu.sass
+++ b/src/components/dropMenu/dropMenu.sass
@@ -1,8 +1,7 @@
 // Custom css 
 .btnDropDown
     .dropMenu
-        position: absolute
-        padding: var(--spacing-2)
+        padding: var(--spacing-2) 0
 
     .dropMenu__item
         height: 42px
@@ -15,22 +14,21 @@
         top: 32px
         width: 100%
 
-    .dropMenu__item__icon
-        margin-right: 2px
-
 .navbar
     .dropMenu
-        position: absolute
         top: 56px
         right: -120px
         width: 280px
         transform: translateX(-45%)
 
 //=====================
-.dropMenu
+.dropMenu:not(.nonFloating)
+    border-radius: var(--border-rad-comp)
+    position: absolute
     background-color: var(--compSurface-light)
     border: var(--border-2)
-    border-radius: var(--border-rad-comp)
+
+.dropMenu:not(.nonFloating, .btnDropDown .dropMenu)
     padding: var(--spacing-3)
 
 .dropMenu__item
